<resources>
    <string name="app_name">exercice 3</string>
    <string name="Title">Exercice 3</string>
    <string name="Id">Moshe Cohen 338057748
        Fakhri Said 201264728</string>
    <string name="facebook_app_id">516727738823471</string>
    <string name="fb_login_protocol_scheme">fb516727738823471</string>
    <string name="Anonymos">Anonymos</string>
    <string name="connect">Sign in</string>
    <string name="create">Sign up</string>
    <string name="email">Email</string>
    <string name="passworld">Password</string>
    <string name="Confirm_Passworld">Confirm Password</string>
    <string name="New_User">New User</string>
    <string name="SignOut">Sign out</string>
    <string name="title_activity_google_auth">GoogleAuth</string>
    <string name="reset_Passworld">Reset password</string>
    <string name="model">Model</string>
    <string name="maker">Maker</string>
    <string name="sorting">Sorting By</string>
    <string name="Filter">Filter By</string>
    <string name="Model">Model: </string>
    <string name="Maker">Maker: </string>
    <string name="Color">Color: </string>
    <string name="Price">Price: </string>
    <string name="ID">ID: </string>
    <string name="Stock">Stock: </string>
    <string name="Year">Year: </string>
    <string name="Buy">Buy</string>
    <string name="Return">Return</string>
    <string name="Submit">Submit</string>
    <string name="Insert">Insert comment here</string>
    <string name="To">to</string>
    <string name="You_Are_anonymous_Toast_Message">You need to sign in before you can purchase this item, you will now be transferred to the log in page</string>
    <string name="Search">Search maker, model or color</string>
    <string name="Demo">Demo</string>
    <string name="notification_title">M and F LTD</string>
    <string name="MyCompte">My account</string>

</resources>
