<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductSetting">



    <TextView
        android:id="@+id/textView_Maker"
        android:layout_width="61dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Maker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Model"
        app:layout_constraintEnd_toEndOf="@+id/textView_Maker"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="@+id/textView_Maker"
        app:layout_constraintTop_toBottomOf="@+id/textView_Maker" />

    <TextView
        android:id="@+id/textView_Color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Color"
        app:layout_constraintEnd_toEndOf="@+id/textView_Model"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="@+id/textView_Model"
        app:layout_constraintTop_toBottomOf="@+id/textView_Model" />

    <TextView
        android:id="@+id/textView_Price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Price"
        app:layout_constraintEnd_toEndOf="@+id/textView_Color"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="@+id/textView_Color"
        app:layout_constraintTop_toBottomOf="@+id/textView_Color" />

    <TextView
        android:id="@+id/textView_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ID"
        app:layout_constraintEnd_toEndOf="@+id/textView_Price"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="@+id/textView_Price"
        app:layout_constraintTop_toBottomOf="@+id/textView_Price" />

    <TextView
        android:id="@+id/textView_Stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Stock"
        app:layout_constraintEnd_toEndOf="@+id/textView_ID"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="@+id/textView_ID"
        app:layout_constraintTop_toBottomOf="@+id/textView_ID" />

    <TextView
        android:id="@+id/textView_Year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Year"
        app:layout_constraintEnd_toEndOf="@+id/textView_Stock"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="@+id/textView_Stock"
        app:layout_constraintTop_toBottomOf="@+id/textView_Stock" />

    <Button
        android:id="@+id/button_Buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="onClickBuy"
        android:text="@string/Buy"
        app:layout_constraintBottom_toBottomOf="@+id/button_Return"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toEndOf="@+id/button_Return"
        app:layout_constraintTop_toBottomOf="@+id/textView_Year"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_Return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="340dp"
        android:onClick="onClickReturn"
        android:text="@string/Return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewCarPic"
        android:layout_width="163dp"
        android:layout_height="154dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_Return"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView_Year"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars[0]" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fillViewport="true"
        tools:ignore="MissingConstraints"
        tools:layout_height="300dp"
        tools:layout_editor_absoluteX="-20dp"
        tools:layout_editor_absoluteY="250dp">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Return">

        <EditText
            android:id="@+id/editTextComment"
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:ems="10"
            android:hint="@string/Insert"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickSubmit"
            android:text="@string/Submit" />
    </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>