<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Filter">

    <TextView
        android:id="@+id/textView_Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sorting"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="127dp"
        android:layout_height="113dp"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="25dp">

        <RadioButton
            android:id="@+id/radioButton_Maker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/maker" />

        <RadioButton
            android:id="@+id/radioButton_Model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/model" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView_Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:text="@string/Filter"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Settings" />

    <Button
        android:id="@+id/button_Filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="108dp"
        android:onClick="onClickFilter"
        android:text="@string/Filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_Year"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Year"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editText_minYear"
        app:layout_constraintTop_toBottomOf="@+id/textView_Filter" />

    <TextView
        android:id="@+id/textView_to1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/To"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editText_MaxYear"
        app:layout_constraintStart_toEndOf="@+id/editText_minYear"
        app:layout_constraintTop_toBottomOf="@+id/textView_Filter" />

    <TextView
        android:id="@+id/textView_price"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="price"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_Filter"
        app:layout_constraintEnd_toStartOf="@+id/editText_minPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_minYear" />

    <TextView
        android:id="@+id/textView_to2"
        android:layout_width="33dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/To"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_Filter"
        app:layout_constraintEnd_toStartOf="@+id/editText_MaxPrice"
        app:layout_constraintTop_toBottomOf="@+id/editText_minYear" />

    <EditText
        android:id="@+id/editText_minYear"
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@+id/textView_Filter"
        tools:layout_editor_absoluteX="86dp" />

    <EditText
        android:id="@+id/editText_MaxYear"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="number"
        android:text="3000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Filter" />

    <EditText
        android:id="@+id/editText_minPrice"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        app:layout_constraintBottom_toTopOf="@+id/button_Filter"
        app:layout_constraintEnd_toStartOf="@+id/textView_to2"
        app:layout_constraintTop_toBottomOf="@+id/editText_minYear" />

    <EditText
        android:id="@+id/editText_MaxPrice"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="100000000"
        app:layout_constraintBottom_toTopOf="@+id/button_Filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_minYear" />

</android.support.constraint.ConstraintLayout>